fix(info-tile): fix icon alignment issue on IOS

--- a/src/components/info-tile/info-tile.scss
+++ b/src/components/info-tile/info-tile.scss
@@ -117,8 +117,7 @@ a {
     right: 0.75rem;
     padding: 0.25rem;
 
-    display: flex;
-    justify-content: center;
+    aspect-ratio: 1/1;
 
     color: var(--info-tile-icon-color, rgb(var(--contrast-1000)));
 
